--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,12 @@
 body {
   margin: 0;
+  background-color :azure;
+}
+
+.box {
+  display: flex;
+  align-items: stretch;
+  height: 100%;
 }
 
 .top-pane {
@@ -9,15 +16,19 @@ body {
 .pane {
   height: 50vh;
   display: flex;
+  flex-direction: column;
+  width: 45%;
+  
 }
 
 .editor-container {
   flex-grow: 1;
   flex-basis: 0;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   padding: .5rem;
-  background-color: hsl(225, 6%, 25%);
+  background-color: hsl(222, 9%, 22%);
+  
 }
 
 .editor-container.collapsed {
@@ -53,7 +64,6 @@ body {
 
 .code-mirror-wrapper {
   flex-grow: 1;
-  border-bottom-right-radius: .5rem;
-  border-bottom-left-radius: .5rem;
+  border-radius: .5rem;
   overflow: hidden;
 }
