--- a/src/index.css
+++ b/src/index.css
@@ -20,9 +20,24 @@ body {
   /* width: 100%; */
 }
 
+.Button {
+  width : 10%;
+  height : 40px;
+  font-size : 15px;
+  margin-top: 5px;
+  color : white;
+  background-color : hsl(225, 6%, 25%);
+  border-radius : 5px;
+  position : absolute;
+  top : 0;
+  right : 57%;
+  overflow : hidden;
+}
+
 .editors{
   overflow: scroll;
   width: 45%;
+  background-color: rgb(72, 72, 73);
 }
 
 .editor-container {
